# demo-avm8

./: README.md  application.py  box_demo.py  frame_pointer_demo.py  framepointer.teal  main.py  match.teal  match_demo.py  mypy.ini  pyproject.toml  switch.teal  switch_demo.py
artifacts/: application.json  approval.teal  contract.json
