[tool.poetry]
name = "demo-avm8"
version = "0.1.0"
description = ""
authors = ["Ben Guidarelli <ben@algorand.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pyteal = "~0.22.0"
py-algorand-sdk = ">=2.0.0"
beaker-pyteal = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
